--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,5 +1,4 @@
 server:
-  port: 8080
   servlet:
     context-path: /esperanza-church/v1
 
@@ -9,7 +8,7 @@ spring:
       enabled: true
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://${DB_HOST_PROD}:${DB_PORT_PROD}/ec-form-db
+    url: jdbc:mysql://${DB_HOST_PROD}:${DB_PORT_PROD}/${DB_NAME_PROD}
     username: ${USR_ECHURCH_PROD}
     password: ${PWD_ECHURCH_PROD}
   jpa:
